Fixes scrollbars hovering over dropdowns on macs

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -320,6 +320,9 @@ a:visited {
     .border-radius(2px);
     .box-shadow(0 1px 2px rgba(50, 50, 50, 0.1));
 
+    /* bug fix for mac os scroll bars */
+    transform: translateZ(0);
+
 
     li {
         position: relative;
@@ -1238,6 +1241,9 @@ div[datepicker] {
 .select2-drop.select2-drop-above {
     border: 1px solid @default-color;
     .select2-results {
+        /* bug fix for mac os scroll bars */
+        transform: translateZ(0);
+
         li.select2-highlighted {
             background-color: @add-color;
             border-radius: 2px;
